--- a/antiSaccade.html
+++ b/antiSaccade.html
@@ -42,6 +42,14 @@
 </head>
 
 <body>
+  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./node_modules/sweetalert/dist/sweetalert.min.js"></script>
+
+  <script src="./js/main.js"></script>
+  <!-- <script src="./js/calibration.js"></script> -->
+  <script src="./js/precision_calculation.js"></script>
+  <script src="./js/precision_store_points.js"></script>
+
   <div class="video-background">
     <video
       autoplay
@@ -87,4 +95,7 @@
       });
     </script>
   </div>
+
+  <script src="./js/resize_canvas.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
