--- a/fixation.html
+++ b/fixation.html
@@ -28,7 +28,9 @@
   <script src="./webgazer.js"></script>
   <script>
     var retrievedData = JSON.parse(localStorage.getItem("gazeData"));
+    var time = JSON.parse(localStorage.getItem("time"));
     console.log("Calibrate", retrievedData);
+    console.log("Time", time);
   </script>
 </head>
 
