--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ Instructions on use can be found in the README repository.
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <script src="./node_modules/sweetalert/dist/sweetalert.min.js"></script>
 
-        <script src="./js/main.js"></script>
+        <!-- <script src="./js/main.js"></script> -->
+        <script src="./js/storage.js"></script>
         <script src="./js/calibration.js"></script>
         <script src="./js/precision_calculation.js"></script>
         <script src="./js/precision_store_points.js"></script>
