--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@ Instructions on use can be found in the README repository.
         <script src="./js/precision_calculation.js"></script>
         <script src="./js/precision_store_points.js"></script>
 
-        <nav id="webgazerNavbar" class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(0, 41, 95);">
+        <nav id="webgazerNavbar" class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(16,22,123);">
           <div class="container-fluid">
             <div class="navbar-header">
               <!-- The hamburger menu button -->
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <button type="button" class="btn btn-light" data-toggle="collapse" data-target="#myNavbar" class="icon-bar">Menu</button>
+              <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar">Menu</span>
-              </button>
+              </button> -->
             </div>
             <div class="collapse navbar-collapse" id="myNavbar" >
               <ul class="nav navbar-nav">
