--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Instructions on use can be found in the README repository.
           <div class="container-fluid">
             <div class="navbar-header">
               <!-- The hamburger menu button -->
-              <button type="button" class="btn btn-light btn-sm" data-toggle="collapse" data-target="#myNavbar" onclick="Restart()" style="">Recalibrate</button>
+              <button type="button" class="btn btn-light btn-sm" data-toggle="collapse" data-target="#myNavbar" onclick="Restart()">Recalibrate</button>
               <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar">Menu</span>
               </button> -->
