--- a/vpctask.html
+++ b/vpctask.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
   <link rel="stylesheet" type="text/css" href="../css/video.css" />
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
@@ -28,20 +27,14 @@
 
   <script src="./webgazer.js"></script>
   <script>
-    window.onload = function () {
-      var webgazerData = JSON.parse(
-        window.localStorage.getItem("webgazerData")
-      );
-      if (webgazerData) {
-        webgazer.setData(webgazerData);
-        console.log("YESS");
-      } else {
-        console.log("NOO");
-      }
-    };
+    var retrievedData = JSON.parse(localStorage.getItem("gazeData"));
+    var time = JSON.parse(localStorage.getItem("time"));
+    console.log("Calibrate", retrievedData);
+    console.log("Time", time);
   </script>
 </head>
-<body>
+
+<body lang="en-US" link="#0000ff" dir="LTR">
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/sweetalert/dist/sweetalert.min.js"></script>
 
@@ -54,7 +47,7 @@
     <video
       autoplay
       loop="false"
-      src="../Video/vpctask.mp4"
+      src="./Video/vpctask.mp4"
       muted="false"
       id="bg-video"
       volume="1"
@@ -63,38 +56,39 @@
     <audio
       autoplay
       allow="autoplay"
-      src="../Audio/vpctask.mp3"
+      src="./Video/vpctask.mp4"
       type="audio/mpeg"
     ></audio>
-
-    <!-- <audio id="myAudio" controls autoplay>
-     
-      <source src="D:\Competitive\NSC\Eye-MED\Eye-Tracking\eyeTracker-main\Audio\Fixation_aud.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio> -->
-    <script>
-      document.getElementById("myaudio").play();
-    </script>
-  </div>
-  <div>
-    <script>
-      var video = document.getElementById("bg-video");
-      video.loop = false;
-      video.addEventListener("ended", function () {
-        var btn = document.createElement("button");
-        btn.innerHTML = "หน้าถัดไป";
-        btn.setAttribute("class", "btn btn-info next-test-btn");
-        btn.style.fontSize = "40px";
-        btn.style.borderRadius = "45px";
-        btn.style.fontFamily = "Anuphan";
-        btn.addEventListener("click", function () {
-          window.location.href = "proSaccade.html";
+    <div>
+      <script>
+        var video = document.getElementById("bg-video");
+        video.loop = false;
+        video.addEventListener("ended", function () {
+          var btn = document.createElement("button");
+          btn.innerHTML = "หน้าถัดไป";
+          btn.setAttribute("class", "btn btn-info next-test-btn");
+          btn.style.fontSize = "40px";
+          btn.style.borderRadius = "45px";
+          btn.style.fontFamily = "Anuphan";
+          btn.addEventListener("click", function () {
+            window.location.href = "proSaccade.html";
+          });
+          var parentDiv =
+            document.getElementsByClassName("video-background")[0];
+          parentDiv.appendChild(btn);
         });
-        var parentDiv = document.getElementsByClassName("video-background")[0];
-        parentDiv.appendChild(btn);
-      });
-    </script>
+      </script>
+    </div>
   </div>
+
+  <!-- <div style="z-index: -100">
+    <canvas
+      id="plotting_canvas"
+      width="500"
+      height="500"
+      style="cursor: crosshair"
+    ></canvas>
+  </div> -->
 
   <script src="./js/resize_canvas.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
