--- a/fixation.html
+++ b/fixation.html
@@ -69,6 +69,7 @@
           btn.style.borderRadius = "45px";
           btn.style.fontFamily = "Anuphan";
           btn.addEventListener("click", function () {
+            webgazer.pause();
             window.location.href = "proSaccade.html";
           });
           var parentDiv =
