--- a/proSaccade.html
+++ b/proSaccade.html
@@ -71,6 +71,7 @@
           btn.style.borderRadius = "45px";
           btn.style.fontFamily = "Anuphan";
           btn.addEventListener("click", function () {
+            webgazer.pause();
             window.location.href = "antiSaccade.html";
           });
           var parentDiv =
