--- a/fixation.html
+++ b/fixation.html
@@ -69,8 +69,9 @@
           btn.style.borderRadius = "45px";
           btn.style.fontFamily = "Anuphan";
           btn.addEventListener("click", function () {
-            webgazer.pause();
             window.location.href = "proSaccade.html";
+            webgazer.pause();
+            callback(latestGazeData, elapsedTime, true);
           });
           var parentDiv =
             document.getElementsByClassName("video-background")[0];
