--- a/fixation.html
+++ b/fixation.html
@@ -71,6 +71,14 @@
           btn.addEventListener("click", function () {
             window.location.href = "proSaccade.html";
             webgazer.pause();
+            if (csvDB == true) {
+              csvDB = false;
+
+              console.log(csvDB);
+              var csv = arr.map((fields) => fields.join(",")).join("\n");
+              var dl = "data:text/csv;charset=utf-8," + csv;
+              window.open(encodeURI(dl));
+            }
             callback(latestGazeData, elapsedTime, true);
           });
           var parentDiv =
