--- a/fixation.html
+++ b/fixation.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
   <link rel="stylesheet" type="text/css" href="../css/video.css" />
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
@@ -25,7 +26,7 @@
     crossorigin="anonymous"
   ></script>
 
-  <script src="./webgazer.js"></script>
+  <script src="https://webgazer.cs.brown.edu/webgazer.js?"></script>
   <script>
     var retrievedData = JSON.parse(localStorage.getItem("gazeData"));
     var time = JSON.parse(localStorage.getItem("time"));
