--- a/antiSaccade.html
+++ b/antiSaccade.html
@@ -25,7 +25,7 @@
     crossorigin="anonymous"
   ></script>
 
-  <script src="https://webgazer.cs.brown.edu/webgazer.js?"></script>
+  <script src="./webgazer.js"></script>
   <script>
     var retrievedData = JSON.parse(localStorage.getItem("gazeData"));
     var time = JSON.parse(localStorage.getItem("time"));
