--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Instructions on use can be found in the README repository.
                 
               </div>
               <div  class="modal-footer">
-                <button type="button" id='start_calibration' class="btn btn-primary" data-dismiss="modal" onclick="Restart()">เริ่มติมตามการเคลื่อนที่ของตา</button>
+                <button type="button" id='start_calibration' class="btn btn-primary" data-dismiss="modal" onclick="Restart()">เริ่มติดตามการเคลื่อนที่ของตา</button>
               </div>
             </div>
           </div>
